crates/carta/tests/snapshots/golden_writer__ipynb__table__table-empty-header.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "|     |     |\n",
    "|-----|-----|\n",
    "| a   | b   |"
   ],
   "id": "d1a00b84-9607-415e-b8ec-0e7a7139c0b4"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
