crates/carta/tests/snapshots/golden_writer__ipynb__table__table-empty.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "||\n",
    "||"
   ],
   "id": "74a03879-197f-4495-bcc7-facb51efb3d6"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
