crates/carta/tests/snapshots/golden_writer__ipynb__table__table-grid-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "| a   | b   |\n",
    "|-----|-----|\n",
    "| 1   | 2   |"
   ],
   "id": "d29b25a1-4891-477b-84c9-aeaef0a096b6"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
