crates/carta/tests/snapshots/golden_writer__ipynb__table__table-long-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "| k | description |\n",
    "|----|----|\n",
    "| a | this cell holds a deliberately long run of text that cannot fit inside one seventy-two column line and therefore forces a layout decision |"
   ],
   "id": "13963229-eeb8-4585-bd67-068c1c36931a"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
