crates/carta/tests/snapshots/golden_writer__ipynb__table__table-short-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "| h   |\n",
    "|-----|\n",
    "| v   |\n",
    "\n",
    "The full caption text"
   ],
   "id": "8a99f5a6-42f6-403d-8624-7cf672582f88"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
