crates/carta/tests/snapshots/golden_writer__ipynb__table__table-simple.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "| h1  | h2  |\n",
    "|-----|-----|\n",
    "| a   | b   |"
   ],
   "id": "e3dd44f9-c792-41f1-841c-249abebaae6e"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
